tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.gatednc.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/cross-crate.rs:3:60
   |
LL | #![cfg_attr(any(gated, gatednc), feature(const_trait_impl, effects))]
   |                                                            ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `cross_crate::NonConst: ~const cross_crate::MyTrait` is not satisfied
  --> $DIR/cross-crate.rs:18:14
   |
LL |     NonConst.func();
   |              ^^^^ the trait `~const cross_crate::MyTrait` is not implemented for `cross_crate::NonConst`
   |
   = help: the trait `cross_crate::MyTrait` is implemented for `cross_crate::NonConst`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
